k8s/clusters/lab/apps/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  namespace: unifi
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi-controller
  namespace: unifi
subsets:
  - addresses:
      - ip: 192.168.4.1
    ports:
      - name: https
        port: 443
        protocol: TCP
