k8s/clusters/lab/apps/unifi/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-controller
  namespace: unifi
  annotations:
    external-dns.alpha.kubernetes.io/hostname: unifi.jaxon.cloud
    external-dns.alpha.kubernetes.io/target: 192.168.8.50
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.jaxon.cloud`)
      kind: Rule
      services:
        - name: unifi-controller
          port: 443
          serversTransport: unifi-transport
  tls:
    certResolver: letsencrypt
